--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -285,7 +285,7 @@
         <!--Card Tela View Controller-->
         <scene sceneID="cy4-xO-owv">
             <objects>
-                <viewController id="8Oz-aI-xQ2" customClass="CardTelaViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="cardVC" id="8Oz-aI-xQ2" customClass="CardTelaViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7zL-Uv-i8J">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -338,43 +338,26 @@
         <scene sceneID="sCW-j3-F6F">
             <objects>
                 <tableViewController id="WEF-IO-D3O" customClass="CategoriesTableViewcontroller" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="250" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XR0-0x-9Jj">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="350" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XR0-0x-9Jj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="250" id="9M2-4f-cCx" customClass="CategoriaTableViewCell" customModule="romance" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="250"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="350" id="9M2-4f-cCx" customClass="CategoriaTableViewCell" customModule="romance" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="350"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9M2-4f-cCx" id="Kif-SI-QN5" customClass="CategoriaTableViewCell" customModule="romance" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="350"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ITA-cW-u0q">
-                                            <rect key="frame" x="32" y="27" width="311" height="204"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfD-r0-Vgm">
-                                            <rect key="frame" x="98" y="192" width="160" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bPlay_v1_GameScreen" translatesAutoresizingMaskIntoConstraints="NO" id="J4k-v6-EMZ">
-                                            <rect key="frame" x="16" y="178" width="79" height="48"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ITA-cW-u0q">
+                                            <rect key="frame" x="16" y="22" width="343" height="328"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="ITA-cW-u0q" firstAttribute="leading" secondItem="Kif-SI-QN5" secondAttribute="leadingMargin" constant="16" id="B6b-nV-CFU"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="ITA-cW-u0q" secondAttribute="bottom" constant="8" id="DtO-fa-inj"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="ITA-cW-u0q" secondAttribute="trailing" constant="16" id="J8r-Lg-S64"/>
-                                        <constraint firstItem="ITA-cW-u0q" firstAttribute="top" secondItem="Kif-SI-QN5" secondAttribute="topMargin" constant="16" id="mj2-jb-21b"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="categoriaImage" destination="ITA-cW-u0q" id="bc5-FQ-7H8"/>
-                                    <outlet property="categoryName" destination="tfD-r0-Vgm" id="rVJ-VN-XU3"/>
                                     <segue destination="lBF-HX-uKY" kind="presentation" id="En3-Do-h7M"/>
                                 </connections>
                             </tableViewCell>
@@ -496,6 +479,13 @@
                                     <segue destination="G3M-vs-Omt" kind="show" id="YvS-FS-MzH"/>
                                 </connections>
                             </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sgs-jv-46B">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="onm-Fx-FgH"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="feZ-rQ-uG9"/>
@@ -505,10 +495,10 @@
             </objects>
             <point key="canvasLocation" x="-2943.1999999999998" y="-11.244377811094454"/>
         </scene>
-        <!--View Controller-->
+        <!--Turn View Controller-->
         <scene sceneID="bVj-Cc-PRF">
             <objects>
-                <viewController id="bG2-3S-PJu" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Main" id="bG2-3S-PJu" customClass="TurnViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YPH-kD-Haa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -540,10 +530,20 @@
                                 <color key="textColor" red="0.2901960784" green="0.56470588239999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mPt-ea-2B7">
+                                <rect key="frame" x="304" y="71" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="1jM-dI-qeQ"/>
                     </view>
+                    <connections>
+                        <outlet property="timerLabel" destination="mPt-ea-2B7" id="eXo-6f-3hq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JwN-Bv-vd3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
